--- a/channel_html_sources/channel_184.html
+++ b/channel_html_sources/channel_184.html
@@ -127,7 +127,7 @@
 <div id="infoBox">
     <img src="https://ltsk-cdn.s3.eu-west-1.amazonaws.com/jumpstart/Temp_Live/cdn/HLS/Channel/imageContent-2694-j638bugw-v1/imageContent-2694-j638bugw-m1.png" background= "white" alt="Channel Logo">
     <div class="title" style="color: white">Pogo</div>
-    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => Little Singham</div>
+    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => Ls: Desh Ka Sipaahi - Mission Jai Ho</div>
 </div>
 
 <div id="jwplayerDiv"></div>
