--- a/channel_html_sources/channel_122.html
+++ b/channel_html_sources/channel_122.html
@@ -127,7 +127,7 @@
 <div id="infoBox">
     <img src="https://ltsk-cdn.s3.eu-west-1.amazonaws.com/jumpstart/Temp_Live/cdn/HLS/Channel/imageContent-7906-j7684flk-v1/imageContent-7906-j7684flk-m1.png" background= "white" alt="Channel Logo">
     <div class="title" style="color: white">Channel WIN</div>
-    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => </div>
+    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => Kyun Bikharte Hain Rishtey?</div>
 </div>
 
 <div id="jwplayerDiv"></div>
