--- a/channel_html_sources/channel_255.html
+++ b/channel_html_sources/channel_255.html
@@ -127,7 +127,7 @@
 <div id="infoBox">
     <img src="https://ltsk-cdn.s3.eu-west-1.amazonaws.com/jumpstart/Temp_Live/cdn/HLS/Channel/imageContent-35638-jruyxl0g-v4/imageContent-35638-jruyxl0g-m7.PNG" background= "white" alt="Channel Logo">
     <div class="title" style="color: white">Harvest TV 24x7</div>
-    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => </div>
+    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => Pr. Ben Thomas</div>
 </div>
 
 <div id="jwplayerDiv"></div>
