--- a/channel_html_sources/channel_58.html
+++ b/channel_html_sources/channel_58.html
@@ -127,7 +127,7 @@
 <div id="infoBox">
     <img src="https://ltsk-cdn.s3.eu-west-1.amazonaws.com/jumpstart/Temp_Live/cdn/HLS/Channel/imageContent-8301-j7hc0820-v1/imageContent-8301-j7hc0820-m1.png" background= "white" alt="Channel Logo">
     <div class="title" style="color: white">Star Sports 1 HD</div>
-    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => </div>
+    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => JAI HO - INDIA'S TOUGHEST WINS</div>
 </div>
 
 <div id="jwplayerDiv"></div>
