--- a/channel_html_sources/channel_52.html
+++ b/channel_html_sources/channel_52.html
@@ -127,7 +127,7 @@
 <div id="infoBox">
     <img src="https://ltsk-cdn.s3.eu-west-1.amazonaws.com/jumpstart/Temp_Live/cdn/HLS/Channel/imageContent-204-j5ftndtc-v1/imageContent-204-j5ftndtc-m1.png" background= "white" alt="Channel Logo">
     <div class="title" style="color: white">TV5 Monde Asie</div>
-    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => </div>
+    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => Le 6H00 Info</div>
 </div>
 
 <div id="jwplayerDiv"></div>
