--- a/channel_html_sources/channel_6.html
+++ b/channel_html_sources/channel_6.html
@@ -127,7 +127,7 @@
 <div id="infoBox">
     <img src="https://ltsk-cdn.s3.eu-west-1.amazonaws.com/jumpstart/Temp_Live/cdn/HLS/Channel/imageContent-18-j5f9ui8g-v1/imageContent-18-j5f9ui8g-m1.png" background= "white" alt="Channel Logo">
     <div class="title" style="color: white">B4U Movies</div>
-    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => Kaun Kare Kurbani</div>
+    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => Jeevan Yudh</div>
 </div>
 
 <div id="jwplayerDiv"></div>
