--- a/channel_html_sources/channel_556.html
+++ b/channel_html_sources/channel_556.html
@@ -127,7 +127,7 @@
 <div id="infoBox">
     <img src="https://ltsk-cdn.s3.eu-west-1.amazonaws.com/jumpstart/Temp_Live/cdn/HLS/Channel/imageContent-67799-kx7m7rhc-v1/imageContent-67799-kx7m7rhc-m2.png" background= "white" alt="Channel Logo">
     <div class="title" style="color: white">Manoranjan Grand</div>
-    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => </div>
+    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => Kissey Kahaniyaan</div>
 </div>
 
 <div id="jwplayerDiv"></div>
