--- a/channel_html_sources/channel_650.html
+++ b/channel_html_sources/channel_650.html
@@ -127,7 +127,7 @@
 <div id="infoBox">
     <img src="https://ltsk-cdn.s3.eu-west-1.amazonaws.com/jumpstart/Temp_Live/cdn/HLS/Channel/EKMOPS_Thumbnail-v1/EKMOPS_Thumbnail.jpg" background= "white" alt="Channel Logo">
     <div class="title" style="color: white">Ekamra One paschima</div>
-    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => </div>
+    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => Album Toxide</div>
 </div>
 
 <div id="jwplayerDiv"></div>
