--- a/channel_html_sources/channel_419.html
+++ b/channel_html_sources/channel_419.html
@@ -127,7 +127,7 @@
 <div id="infoBox">
     <img src="https://ltsk-cdn.s3.eu-west-1.amazonaws.com/jumpstart/Temp_Live/cdn/HLS/Channel/imageContent-49002-k5cch1cg-v2/imageContent-49002-k5cch1cg-m5.png" background= "white" alt="Channel Logo">
     <div class="title" style="color: white">Investigation Discovery</div>
-    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => Evil Lives Here</div>
+    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => Mother, May I Murder?</div>
 </div>
 
 <div id="jwplayerDiv"></div>
