--- a/channel_html_sources/channel_490.html
+++ b/channel_html_sources/channel_490.html
@@ -127,7 +127,7 @@
 <div id="infoBox">
     <img src="https://ltsk-cdn.s3.eu-west-1.amazonaws.com/jumpstart/Temp_Live/cdn/HLS/Channel/imageContent-52842-k980h8vc-v1/imageContent-52842-k980h8vc-m2.png" background= "white" alt="Channel Logo">
     <div class="title" style="color: white">Eurosport HD</div>
-    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => </div>
+    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => NASCAR Cup Series 2024</div>
 </div>
 
 <div id="jwplayerDiv"></div>
