--- a/channel_html_sources/channel_636.html
+++ b/channel_html_sources/channel_636.html
@@ -127,7 +127,7 @@
 <div id="infoBox">
     <img src="https://ltsk-cdn.s3.eu-west-1.amazonaws.com/jumpstart/Temp_Live/cdn/HLS/Channel/TPHLTE_Thumbnail-v5/TPHLTE_Thumbnail.png" background= "white" alt="Channel Logo">
     <div class="title" style="color: white">Tata Play Hollywood Local Telugu</div>
-    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => </div>
+    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => Once in the Desert</div>
 </div>
 
 <div id="jwplayerDiv"></div>
