--- a/channel_html_sources/channel_445.html
+++ b/channel_html_sources/channel_445.html
@@ -127,7 +127,7 @@
 <div id="infoBox">
     <img src="https://ltsk-cdn.s3.eu-west-1.amazonaws.com/jumpstart/Temp_Live/cdn/HLS/Channel/imageContent-34652-jpmey8gw-v1/imageContent-34652-jpmey8gw-m1.png" background= "white" alt="Channel Logo">
     <div class="title" style="color: white">Aaj Tak HD</div>
-    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => </div>
+    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => 10 Minute 50 Khabar</div>
 </div>
 
 <div id="jwplayerDiv"></div>
