--- a/channel_html_sources/channel_196.html
+++ b/channel_html_sources/channel_196.html
@@ -127,7 +127,7 @@
 <div id="infoBox">
     <img src="https://ltsk-cdn.s3.eu-west-1.amazonaws.com/jumpstart/Temp_Live/cdn/HLS/Channel/imageContent-11030-j8yk2g3s-v1/imageContent-11030-j8yk2g3s-m1.png" background= "white" alt="Channel Logo">
     <div class="title" style="color: white">Zee Kannada</div>
-    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => </div>
+    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => Puttakkana Makkalu</div>
 </div>
 
 <div id="jwplayerDiv"></div>
